# tarxemo-django-stripe

./: LICENSE  MANIFEST.in  README.md  makemigrations_lib.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
stripe_payments/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  handlers.py  models.py  signals.py  urls.py  utils.py  views.py
stripe_payments/managers/: __init__.py  customer_manager.py  payment_manager.py  refund_manager.py  subscription_manager.py
stripe_payments/migrations/: 0001_initial.py  __init__.py
stripe_payments/services/: __init__.py  customer_service.py  payment_service.py  refund_service.py  webhook_service.py
tarxemo_django_stripe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
